fix scrollbar wobble

--- a/fleet/css/app.css
+++ b/fleet/css/app.css
@@ -29,7 +29,7 @@
 }
 
 #display-trip-loading{
-	height: 80px;
+	height: 120px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
